# SuperAgent

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENT_BOOST_SUMMARY.md  API_DOCS_SUMMARY.md  ARCHON_CONNECTION_GUIDE.md  AUTONOMOUS_BUILD.md  AUTONOMOUS_BUILD_IMPROVEMENT_PLAN.md  BRAINSTORM_MODE.md  BUG_FIX_SUMMARY.md  BUILD_ANALYSIS.md  CHAT_WITH_KAYA.md  CLAUDE.md  DOCKER_ARCHITECTURE_ANALYSIS.md  DOCKER_DEPLOYMENT.md  DOCKER_FILES_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  ERROR_RECOVERY_DEMO.md  ERROR_RECOVERY_INTEGRATION_GUIDE.md  ERROR_RECOVERY_README.md  FILENAME_FIX_COMPLETE.md  FULL_ARCHON_INTEGRATION_STATUS.md  GOOD_MORNING.md  HITL_DASHBOARD_IMPLEMENTATION.md  INTEGRATION_TEST_SUMMARY.md  KAYA_SELF_HEALING_COMPLETE.md  LAUNCH_GUIDE.md  LIFECYCLE_QUICK_REFERENCE.md  MEDIC_HITL_ESCALATION.md  Makefile  NEXT_SESSION_INSTRUCTIONS.md  OBSERVABILITY_GUIDE.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  OVERNIGHT_BUILD_READY.md  PERFORMANCE_REPORT.md  PHASE_1_EXECUTION_PLAN.md  QUICK_START.txt  RAG_ENHANCED_MEDIC.md  (+48 more)
.claude/: observability.yaml  router_policy.yaml
agent_system/: __init__.py  archon_client.py  cli.py  complexity_estimator.py  cost_analytics.py  coverage_analyzer.py  error_recovery.py  lifecycle.py  mcp_integration.py  metrics_aggregator.py  optimizations.py  rate_limiter.py  router.py  sandbox.py  secrets_manager.py  tools.yaml  validation_rubric.py
config/: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
docs/: API_HITL_ENDPOINTS.md  API_QUICK_START.md  ARCHITECTURE.md  DEPLOYMENT.md  OPENAPI_USAGE.md  README.md  (+4 more)
(+235 files in other folders)
